# quran-research-software

./: .gitignore  README.md  _t.py  api_server.py  database.py  lane_lexicon_3_2.json  pyproject.toml  quran_lexicon_pipeline.code-workspace  quran_pages.xlsx  requirements-camel.txt  requirements-stanza.txt  requirements.txt  server.py
data/chat/: bot1_system_base.txt  bot1_ui_settings.json  bot2_system_base.txt  bot2_ui_settings.json  question_refiner_sessions.json  step5_ui_settings.json
docs/: architecture.md  audit-report.md  bot1-topics-connotations-system.md  bot2-arabic-synonyms-system.md  chatbot-question-refiner.md  data-model.md  project-features.md  quran-openai-prompt-bot4.md  quran-openai-prompts.md  step5-theological-synthesizer-system.md
legacy/: README.md  json_breaker.py  lexicon_csv.py  lexicon_selenium_json.py
scripts/: build_ui_icons.py  camel_morphology_demo.py  check_db_population.py  import_lexicon.py  import_quran.py  import_quran_root_json.py  init_db.py  map_roots.py  run_morphology_pipeline.py  split_json.py  verify_db.py
src/: __init__.py  config.py
src/chat/: __init__.py  bot1_engine.py  bot1_ui_settings.py  bot2_engine.py  bot2_ui_settings.py  llm_pricing.py  llm_provider.py  openai_documented_models.py  openai_health.py  (+18 more)
tests/: test_camel_pipeline_optional.py  test_corpus_roots.py  test_ensemble_morphology.py  test_find_verses.py  test_morphology_pipeline_unit.py  test_morphology_surface.py  test_normalize.py  test_session_document_policy.py  test_step5_recovery.py  test_step6_knowledge_chunking.py  test_step6_report_chat.py
(+68 files in other folders)
